logs/watchdog_20251012_1215.log
[12/10/2025 12:15:01,67] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[12/10/2025 12:15:01,91] END WATCHDOG 
